# learning-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose-local.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/models/: users.py
app/schemas/: tuned_model.py
app/schemas/user/: create_user.py  show_user.py
app/services/: database.py
app/utils/: utils.py
tests/: __init__.py  test_status.py
